--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# See https://www.dartlang.org/guides/libraries/private-files
+*.iml
+.DS_Store
 
 # Files and directories created by pub
 .dart_tool/
