--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,13 @@
 name: audio_plus
 description: "audio_plus plays audio in Flutter apps, offering play, pause, resume, and stop and advanced features for enhanced audio control."
-version: 0.0.1
-homepage:
+version: 0.0.2
+homepage: https://github.com/bedirhanssaglam/audio_plus
+repository: https://github.com/bedirhanssaglam/audio_plus
+issue_tracker: https://github.com/bedirhanssaglam/audio_plus/issues
+topics: [audio, sound, plugin]
+platforms:
+  android:
+  ios:
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
